cmake_minimum_required(VERSION 3.0.0)
project(LearnOpen VERSION 0.1.0)
find_package(glfw3 CONFIG REQUIRED)
find_package(Eigen3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(assimp CONFIG REQUIRED)
include(CTest)


#enable_testing()
#add_subdirectory(Shaders)


set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
#target_link_libraries(LearnOpen glfw glad::glad)
#add_subdirectory(Shaders)
# target_link_libraries(main PRIVATE glm::glm)
#add_subdirectory(Texture)
#add_subdirectory(Camera)
#add_subdirectory(lighting-color)
#add_subdirectory(lighting-lighting_texture)
#add_subdirectory(lighting-light_caster)
# target_link_libraries(main PRIVATE assimp::assimp)
#add_subdirectory(lighting-multiple_lights)
#add_subdirectory(model-mesh)
#add_subdirectory(Advance-blending)
#add_subdirectory(Advance-Framebuffers) 
#add_subdirectory(Advance-CubeMaps)
#add_subdirectory(Advance-AdvanceGLSL)
add_subdirectory(Advance-GeometryShader)